# calc2026

./: .gitignore  CMakeLists.txt  CustomButton.qml  Main.qml  README.md  SecretCodeLogic.qml  SecretMenu.qml  calculator.cpp  calculator.h  main.cpp  resources.qrc
